--- a/client/public/locales/en.json
+++ b/client/public/locales/en.json
@@ -1,4 +1,58 @@
 {
     "PHAM QUOC THAI": "pqt",
-    "Chọn ngôn ngữ": "Select language"
+    "Chọn ngôn ngữ": "Select language",
+    "Upload": "Upload",
+    "Stop": "Stop",
+    "Download XML": "Download XML",
+    "Import XML": "Import XML",
+    "Delete Class": "Delete Class",
+    "Remove All Samples": "Remove All Samples",
+    "Download Samples": "Download Samples",
+    "Image Samples": "Image Samples",
+    "Webcam": "Webcam",
+    "Recording": "Recording",
+    "images": "images",
+    "Start Recording": "Start Recording",
+    "Stop Recording": "Stop Recording",
+    "Result statistics": "Result statistics",
+    "Below are some charts that can help you understand how your model is performing.": "Below are some charts that can help you understand how your model is performing.",
+    "Accuracy per epoch": "Accuracy per epoch",
+    "Loss per epoch": "Loss per epoch",
+    "Epoch": "Epoch",
+    "Accuracy": "Accuracy",
+    "Loss": "Loss",
+    "Training...": "Training...",
+    "Train Model": "Train Model",
+    "Advanced": "Advanced",
+    "Epochs": "Epochs",
+    "Batch Size": "Batch Size",
+    "Learning Rate": "Learning Rate",
+    "Reset to default": "Reset to default",
+    "Technical details": "Technical details",
+    "Preview": "Preview",
+    "Export Model": "Export Model",
+    "Input": "Input",
+    "Output": "Output",
+    "Export your model to use it in projects.": "Export your model to use it in projects.",
+    "Model conversion type:": "Model conversion type:",
+    "Import to Pi": "Import to Pi",
+    "Download my model": "Download my model",
+    "Stop export pi": "Stop export pi",
+    "Export your model for Raspberry Pi deployment. This will download a zip file containing model.h5, metadata.json, and raspberry_predict.py for real-time prediction.": "Export your model for Raspberry Pi deployment. This will download a zip file containing model.h5, metadata.json, and raspberry_predict.py for real-time prediction.",
+    "Export your model to TensorFlow format. You can choose between Keras (.h5) or SavedModel format.": "Export your model to TensorFlow format. You can choose between Keras (.h5) or SavedModel format.",
+    "Export your model to TensorFlow Lite format for mobile and edge devices.": "Export your model to TensorFlow Lite format for mobile and edge devices.",
+    "Realtime": "Realtime",
+    "Image": "Image",
+    "Hello": "Hello",
+    "What can I help you with today": "What can I help you with today",
+    "What is STEM?": "What is STEM?",
+    "What is Machine Learning?": "What is Machine Learning?",
+    "The STEM and Machine Learning learning path": "The STEM and Machine Learning learning path",
+    "Effective learning sources for STEM and Machine Learning": "Effective learning sources for STEM and Machine Learning",
+    "Enter your question here": "Enter your question here",
+    "Send": "Send",
+    "Type your message...": "Type your message...",
+    "New chat": "New chat",
+    "Recent chats": "Recent chats",
+    "Logout": "Logout"
 }
