--- a/client/public/locales/vi.json
+++ b/client/public/locales/vi.json
@@ -1,4 +1,58 @@
 {
     "PHAM QUOC THAI": "PQT",
-    "Chọn ngôn ngữ": "Chọn ngôn ngữ"
+    "Chọn ngôn ngữ": "Chọn ngôn ngữ",
+    "Upload": "Tải lên",
+    "Stop": "Dừng",
+    "Download XML": "Tải XML",
+    "Import XML": "Nhập XML",
+    "Delete Class": "Xóa lớp",
+    "Remove All Samples": "Xóa tất cả mẫu",
+    "Download Samples": "Tải mẫu",
+    "Image Samples": "Ảnh mẫu",
+    "Webcam": "Webcam",
+    "Recording": "Đang ghi hình",
+    "images": "ảnh",
+    "Start Recording": "Bắt đầu ghi hình",
+    "Stop Recording": "Dừng ghi hình",
+    "Result statistics": "Thống kê kết quả",
+    "Below are some charts that can help you understand how your model is performing.": "Dưới đây là một số biểu đồ có thể giúp bạn hiểu mô hình của bạn đang hoạt động như thế nào.",
+    "Accuracy per epoch": "Độ chính xác theo epoch",
+    "Loss per epoch": "Mất mát theo epoch",
+    "Epoch": "Epoch",
+    "Accuracy": "Độ chính xác",
+    "Loss": "Mất mát",
+    "Training...": "Đang huấn luyện...",
+    "Train Model": "Huấn luyện mô hình",
+    "Advanced": "Nâng cao",
+    "Epochs": "Epochs",
+    "Batch Size": "Batch Size",
+    "Learning Rate": "Learning Rate",
+    "Reset to default": "Đặt lại mặc định",
+    "Technical details": "Chi tiết kỹ thuật",
+    "Preview": "Xem trước",
+    "Export Model": "Xuất mô hình",
+    "Input": "Đầu vào",
+    "Output": "Đầu ra",
+    "Export your model to use it in projects.": "Xuất mô hình để sử dụng trong dự án của bạn.",
+    "Model conversion type:": "Loại chuyển đổi mô hình:",
+    "Import to Pi": "Nhập vào Pi",
+    "Download my model": "Tải mô hình của tôi",
+    "Stop export pi": "Dừng xuất pi",
+    "Export your model for Raspberry Pi deployment. This will download a zip file containing model.h5, metadata.json, and raspberry_predict.py for real-time prediction.": "Xuất mô hình cho phép triển khai trên Raspberry Pi. Điều này sẽ tải xuống tệp zip chứa model.h5, metadata.json và raspberry_predict.py để dự đoán thời gian thực.",
+    "Export your model to TensorFlow format. You can choose between Keras (.h5) or SavedModel format.": "Xuất mô hình sang định dạng TensorFlow. Bạn có thể chọn giữa Keras (.h5) hoặc SavedModel.",
+    "Export your model to TensorFlow Lite format for mobile and edge devices.": "Xuất mô hình sang định dạng TensorFlow Lite cho thiết bị di động và cạnh.",
+    "Realtime": "Thời gian thực",
+    "Image": "Hình ảnh",
+    "Hello": "Xin Chào",
+    "What can I help you with today": "Hôm nay tôi có thể giúp gì cho bạn",
+    "What is STEM?": "STEM là gì?",
+    "What is Machine Learning?": "Machine Learning là gì?",
+    "The STEM and Machine Learning learning path": "Lộ trình học STEM và Machine Learning",
+    "Effective learning sources for STEM and Machine Learning": "Các nguồn học hiệu quả cho STEM và Machine Learning",
+    "Enter your question here": "Nhập câu hỏi của bạn ở đây",
+    "Send": "Gửi",
+    "Type your message...": "Nhập tin nhắn của bạn...",
+    "New chat": "Cuộc trò chuyện mới",
+    "Recent chats": "Cuộc trò chuyện gần đây",
+    "Logout": "Đăng xuất"
 }
